cmake_minimum_required(VERSION 3.24.0 FATAL_ERROR)
if (BSTONE_USE_STATIC_LINKING)
	set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
endif ()
# Common
set(SDL_ASAN OFF CACHE BOOL "Use AddressSanitizer to detect memory errors" FORCE)
set(SDL_CLANG_TIDY OFF CACHE BOOL "Run clang-tidy static analysis" FORCE)
set(SDL_DEPS_SHARED ON CACHE BOOL "Load dependencies dynamically" FORCE)
set(SDL_EXAMPLES OFF CACHE BOOL "Build the examples directory" FORCE)
set(SDL_INSTALL OFF CACHE BOOL "Enable installation of SDL3" FORCE)
set(SDL_SHARED OFF CACHE BOOL "Build a shared version of the library" FORCE)
set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
set(SDL_TEST_LIBRARY OFF CACHE BOOL "Build the SDL3_test library" FORCE)
set(SDL_UNINSTALL OFF CACHE BOOL "Enable uninstallation of SDL3" FORCE)
set(SDL_VENDOR_INFO "BStone" CACHE STRING "Vendor name and/or version to add to SDL_REVISION" FORCE)
# Subsystems
set(SDL_CAMERA OFF CACHE BOOL "Enable the Camera subsystem" FORCE)
set(SDL_DIALOG OFF CACHE BOOL "Enable the Dialog subsystem" FORCE)
set(SDL_DISKAUDIO OFF CACHE BOOL "Support the disk writer audio driver" FORCE)
set(SDL_GPU OFF CACHE BOOL "Enable the GPU subsystem" FORCE)
set(SDL_HAPTIC OFF CACHE BOOL "Enable the Haptic subsystem" FORCE)
set(SDL_JOYSTICK OFF CACHE BOOL "Enable the Joystick subsystem" FORCE)
set(SDL_OFFSCREEN OFF CACHE BOOL "Use offscreen video driver" FORCE)
set(SDL_OPENVR OFF CACHE BOOL "Use OpenVR video driver" FORCE)
set(SDL_POWER OFF CACHE BOOL "Enable the Power subsystem" FORCE)
set(SDL_SENSOR OFF CACHE BOOL "Enable the Sensor subsystem" FORCE)
set(SDL_TRAY OFF CACHE BOOL "Enable the Tray subsystem" FORCE)
add_subdirectory(src)
